[gd_scene load_steps=6 format=3 uid="uid://cba733jrew60e"]

[ext_resource type="Texture2D" uid="uid://dyjqjro80p54e" path="res://assets/UI.png" id="1_4g3rc"]
[ext_resource type="FontFile" uid="uid://ckrrv3c1332yu" path="res://assets/fonts/Jersey_10/Jersey10-Regular.ttf" id="1_4xtjk"]
[ext_resource type="Script" uid="uid://dk8qnmvw72nyi" path="res://scripts/main_menu.gd" id="1_hyrlu"]
[ext_resource type="PackedScene" uid="uid://dyt67iu8nuu60" path="res://scenes/levels/SoloLevel.tscn" id="2_agb1x"]

[sub_resource type="LabelSettings" id="LabelSettings_4g3rc"]
font = ExtResource("1_4xtjk")
font_size = 64
font_color = Color(0.97, 0.9522167, 0.9215, 1)
shadow_size = 0
shadow_color = Color(0.43, 0.25972, 0.1978, 1)
shadow_offset = Vector2(0, -2)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_hyrlu")
solo_game = ExtResource("2_agb1x")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.051, 0.042, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -157.0
offset_right = 289.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4g3rc")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 11

[node name="Title" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -126.5
offset_right = 67.0
offset_bottom = -56.5
grow_horizontal = 2
grow_vertical = 2
text = "Kilal Zombie"
label_settings = SubResource("LabelSettings_4g3rc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 28.0
offset_right = 50.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="QuitButton" type="Button" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 70.0
offset_right = 50.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[connection signal="pressed" from="NinePatchRect/StartButton" to="." method="start_solo_game"]
[connection signal="pressed" from="NinePatchRect/QuitButton" to="." method="quit_game"]
